Clean up `TestRuntimeMojo` (#404)